k8s/nzuguem-k8s-compliance-policies-mutating-internal.yml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: nzuguem-k8s-compliance-policies-mutating-internal
webhooks:
- name: labels-enrichment.nzuguem.me
  rules:
  - apiGroups:
    - ""
    - apps
    - networking.k8s.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - pods
    - deployments
    - services
    - ingresses
    scope: Namespaced
  clientConfig:
    service:
      name: nzuguem-k8s-compliance-policies-controller
      namespace: compliance-policies-system
      path: /mutations/labels
      port: 443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvekNDQWVlZ0F3SUJBZ0lKQVBqMklveHJoYzdHTUEwR0NTcUdTSWIzRFFFQkN3VUFNQkl4RURBT0JnTlYKQkFvTUIyNTZkV2QxWlcwd0hoY05Nak13T1RBNE1UWTFOalF3V2hjTk16TXdPVEExTVRZMU5qUXdXakFTTVJBdwpEZ1lEVlFRS0RBZHVlblZuZFdWdE1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBCnhvNTRMaUNTSHZ1YWg0Y3RyZHlQSE1MK2F1MW9XckJTNE1yUy9zOFV6VFE3cXpSSlBoK0liRUI5QzJrU3ZjOU4KNzBLNEk2bnlvMnRNc24xSVYvRTdkeHJSOEgyWHpVc0Q4RDkzR3dwTGVYL1FQU0l5R2RKSk1FOVI0c3ExejYybgozZmh5QWMxYnFES3 [...]
  admissionReviewVersions:
  - v1
  - v1beta1
  sideEffects: None
  namespaceSelector:
    matchLabels:
      mutating-webhook: enabled
