k8s/nzuguem-k8s-compliance-policies-validating-external.yml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: nzuguem-k8s-compliance-policies-validating-external
webhooks:
- name: image-policy.nzuguem.me
  rules:
  - apiGroups:
    - apps
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - deployments
    scope: Namespaced
  clientConfig:
    url: https://host.minikube.internal:8443/validations/images
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN6RENDQWJTZ0F3SUJBZ0lKQU43SUtqVjluQW9ETUEwR0NTcUdTSWIzRFFFQkN3VUFNQkl4RURBT0JnTlYKQkFvTUIyNTZkV2QxWlcwd0hoY05Nak13T1RBNE1UVTFOalEwV2hjTk16TXdPVEExTVRVMU5qUTBXakFTTVJBdwpEZ1lEVlFRS0RBZHVlblZuZFdWdE1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBCnFhYWEzdmRxWTFGaGNJYkVCdlFpTnR5MThvWUhUditqM1FLM0pCSDFBaFZ1RW1ZY0pEeGwwd3dzV2psWndhY0sKaTk0QzQrWm93bkVEeVpoN2RPb3M4WG4zS0FuaEtJZldiSEpoOSt4NEVFWStQcW5DYm9NMVd1RktSK24zS08xZwpQYzlwemJITmlvOH [...]
  admissionReviewVersions:
  - v1
  - v1beta1
  sideEffects: None
  namespaceSelector:
    matchLabels:
      validating-webhook: enabled
- name: labels-policy.nzuguem.me
  rules:
    - apiGroups:
      - ""
      - apps
      - networking.k8s.io
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - pods
      - deployments
      - services
      - ingresses
      scope: Namespaced
  clientConfig:
    url: https://host.minikube.internal:8443/validations/labels
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN6RENDQWJTZ0F3SUJBZ0lKQU43SUtqVjluQW9ETUEwR0NTcUdTSWIzRFFFQkN3VUFNQkl4RURBT0JnTlYKQkFvTUIyNTZkV2QxWlcwd0hoY05Nak13T1RBNE1UVTFOalEwV2hjTk16TXdPVEExTVRVMU5qUTBXakFTTVJBdwpEZ1lEVlFRS0RBZHVlblZuZFdWdE1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBCnFhYWEzdmRxWTFGaGNJYkVCdlFpTnR5MThvWUhUditqM1FLM0pCSDFBaFZ1RW1ZY0pEeGwwd3dzV2psWndhY0sKaTk0QzQrWm93bkVEeVpoN2RPb3M4WG4zS0FuaEtJZldiSEpoOSt4NEVFWStQcW5DYm9NMVd1RktSK24zS08xZwpQYzlwemJITmlvOH [...]
  admissionReviewVersions:
  - v1
  - v1beta1
  sideEffects: None
  namespaceSelector:
    matchLabels:
      validating-webhook: enabled
